@@ -13,9 +13,9 @@ is(normalize_pkg_path('/usr/share/java', '/usr/share/ant/file'), 'usr/share/ant/
 is(normalize_pkg_path('/usr/share/ant', '/'), q{}, 'Safe absolute root');
 
 # Safe - relative
-is(normalize_pkg_path('/usr/share/java', './file'), 'usr/share/java/file', 'Safe simple same-dir path');
-is(normalize_pkg_path('/usr/share/java', '../ant/file'), 'usr/share/ant/file', 'Safe simple relative path');
-is(normalize_pkg_path('/usr/share/java', '../../../usr/share/ant/file'), 'usr/share/ant/file', 'Safe absurd relative path');
+is(normalize_pkg_path('/usr/share/java', './file/.'), 'usr/share/java/file', 'Safe simple same-dir path');
+is(normalize_pkg_path('/usr/share/java', '../ant/./file'), 'usr/share/ant/file', 'Safe simple relative path');
+is(normalize_pkg_path('/usr/share/java', '../../../usr/./share/../share/./ant/file'), 'usr/share/ant/file', 'Safe absurd relative path');
 is(normalize_pkg_path('/usr/share/java', '.'), 'usr/share/java', 'Safe relative dot path');
 is(normalize_pkg_path('/', '.'), q{}, 'Safe relative root dot');
 is(normalize_pkg_path('/', 'usr/..'), q{}, 'Safe absurd relative root path');
